# symantec

./: .env  .gitignore  CMakeLists.txt  README.md  Resource.h  build.ps1  main.cpp  main.h  symantec.cpp  symantec.rc  symantec.sln  symantec.vcxproj  symantec.vcxproj.filters
app/: main.cpp  main.h
app/core/analytics/: analytics.cpp  analytics.h
app/core/scanner/signature_scanner/: signature_scanner.cpp  signature_scanner.h
app/models/: model.h
app/models/logs/: logs.cpp  logs.h
app/models/signature/: signature.cpp  signature.h
app/models/signature/queries/: create_database.sql
app/modules/configuration/: configuration.cpp  configuration.h
app/modules/database/: database.cpp  database.h
app/modules/database/SQLite_Database/: SQLite_Database.cpp  SQLite_Database.h
app/modules/session/: session.cpp  session.h
docs/: scope_statement.docx
include/core/engine/: engine_interface.h
include/core/scanner/: signature_scanner.h
include/database/: database.h
include/models/: model.h
include/models/exception/: exception.h
include/models/signature/: signature_model.h
libs/glfw3/: CONTROL
libs/glfw3/share/glfw3/: vcpkg.spdx.json  vcpkg_abi_info.txt
resources/docs/: project_structure.docx
scripts/configuration_init/: configuration_init.cpp  configuration_init.h
scripts/database_schema/: database_schema.cpp  database_schema.h
scripts/dotenv_generate/: dotenv_generate.cpp  dotenv_generate.h
scripts/dotenv_reader/: dotenv_reader.cpp  dotenv_reader.h
src/core/engine/: engine_interface.cpp
src/core/scanner/: signature_scanner.cpp
src/database/: database.c  database.cpp
src/models/exception/: exception.cpp
